modulized and more comments

--- a/validate_paper.ipynb
+++ b/validate_paper.ipynb
@@ -1,14 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This notebook shows the comparison between pathology and differential diagnosis in the paper"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas\n",
-    "\n",
-    "valid = pandas.read_csv(\"20043374\\\\validateProcessed.csv\")"
+    "import pandas as pd\n",
+    "test = pd.read_csv(\"../20043374/testProcessed.csv\")"
    ]
   },
   {
@@ -17,10 +23,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diff_diagnosis_valid = valid['DIFFERENTIAL_DIAGNOSIS'].copy()\n",
-    "valid = valid.drop('DIFFERENTIAL_DIAGNOSIS', axis=1)\n",
-    "valid = valid.drop('INITIAL_EVIDENCE', axis=1)\n",
-    "valid[list(set(valid.columns) - set(['AGE', 'PATHOLOGY']))] = valid[list(set(valid.columns) - set(['AGE', 'PATHOLOGY']))].astype(bool)"
+    "def disease_to_list(df):\n",
+    "    diseases = []\n",
+    "    for diseases_row in df['DIFFERENTIAL_DIAGNOSIS']:\n",
+    "        diseases.append([disease.strip(\" ''\") for disease in diseases_row.strip(\"[]\").split(\",\") ][0].strip(\"[]\").split(\",\")[0])\n",
+    "    df['DIFFERENTIAL_DIAGNOSIS'] = diseases\n",
+    "    return df\n",
+    "\n",
+    "import sklearn.metrics\n",
+    "def calculate_metric(pathology, prediction, index=[\"data\"]):\n",
+    "    return pd.DataFrame({\n",
+    "        \"accuracy\": sklearn.metrics.accuracy_score(pathology, prediction),\n",
+    "        \"precision\": sklearn.metrics.precision_score(pathology, prediction, average=\"macro\"),\n",
+    "        \"recall\": sklearn.metrics.recall_score(pathology, prediction, average=\"macro\"),\n",
+    "        \"f1 score\": sklearn.metrics.f1_score(pathology, prediction, average=\"macro\"),\n",
+    "        \"balanced accuracy\": sklearn.metrics.balanced_accuracy_score(pathology, prediction)\n",
+    "        }, index=index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predict and calculate metric"
    ]
   },
   {
@@ -29,35 +54,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def disease_to_list(df):\n",
-    "    diseases = []\n",
-    "    for diseases_row in df['DIFFERENTIAL_DIAGNOSIS']:\n",
-    "        diseases.append([disease.strip(\" ''\") for disease in diseases_row.strip(\"[]\").split(\",\") ][0].strip(\"[]\").split(\",\")[0])\n",
-    "    df['DIFFERENTIAL_DIAGNOSIS'] = diseases\n",
-    "    return df"
+    "diff_diagnosis_test = test['DIFFERENTIAL_DIAGNOSIS'].copy()\n",
+    "paper_prediction = disease_to_list(pd.DataFrame(diff_diagnosis_test))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "paper_prediction = disease_to_list(pandas.DataFrame(diff_diagnosis_valid))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7336917129741484\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -67,24 +72,59 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8047180845960777\n",
-      "0.7030026694098916\n",
-      "0.7234713833397826\n",
-      "0.7030026694098916\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1 score</th>\n",
+       "      <th>balanced accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>test</th>\n",
+       "      <td>0.732838</td>\n",
+       "      <td>0.805957</td>\n",
+       "      <td>0.705329</td>\n",
+       "      <td>0.725808</td>\n",
+       "      <td>0.705329</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      accuracy  precision    recall  f1 score  balanced accuracy\n",
+       "test  0.732838   0.805957  0.705329  0.725808           0.705329"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sklearn.metrics\n",
-    "\n",
-    "print(sklearn.metrics.accuracy_score(valid['PATHOLOGY'], paper_prediction))\n",
-    "print(sklearn.metrics.precision_score(valid['PATHOLOGY'], paper_prediction, average=\"macro\"))\n",
-    "print(sklearn.metrics.balanced_accuracy_score(valid['PATHOLOGY'], paper_prediction))\n",
-    "print(sklearn.metrics.f1_score(valid['PATHOLOGY'], paper_prediction, average=\"macro\"))\n",
-    "print(sklearn.metrics.recall_score(valid['PATHOLOGY'], paper_prediction, average=\"macro\"))"
+    "test_metric = calculate_metric(test['PATHOLOGY'], paper_prediction, index=[\"test\"])\n",
+    "test_metric"
    ]
   }
  ],
