Add DS5500_Logistic notebook

--- a/DS5500_Logistic.ipynb
+++ b/DS5500_Logistic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b8e6f1aa",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.pipeline import make_pipeline\n",
+    "import sklearn.metrics\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, balanced_accuracy_score"
    ]
   },
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "25085314",
    "metadata": {},
    "outputs": [],
@@ -40,11 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "636d326e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# apply the read_csv function into train, validate, and test datasets reading\n",
     "train = read_csv('/Users/ag/Desktop/trainProcessed.csv')\n",
     "validate = read_csv('/Users/ag/Desktop/validateProcessed.csv')\n",
     "test = read_csv('/Users/ag/Desktop/testProcessed.csv')"
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "39ec2e5a",
    "metadata": {},
    "outputs": [
@@ -217,13 +219,13 @@
        "[3 rows x 521 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train.head(3)"
+    "train.head(3) # see the first three rows of the train dataset"
    ]
   },
   {
@@ -236,12 +238,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "8bbdaa7b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function for spliting dataset and drop columns\n",
+    "# a function for spliting dataset and drop columns\n",
     "def data_pre(df, target_column):\n",
     "    targets = {}\n",
     "    for column in target_columns:\n",
@@ -262,28 +264,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "466dde7a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the target columns we want to move from the train dataset\n",
     "target_columns = ['PATHOLOGY', 'DIFFERENTIAL_DIAGNOSIS', 'INITIAL_EVIDENCE']\n",
+    "# apply the function to train dataset\n",
     "train_X, train_targets = data_pre(train, target_columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "5f7009c3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# convert the dataset into pandas dataframe\n",
     "train_targets_df = pd.DataFrame(train_targets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "84bcbd7d",
    "metadata": {},
    "outputs": [],
@@ -294,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "de06df49",
    "metadata": {},
    "outputs": [
@@ -436,13 +441,13 @@
        "[2 rows x 518 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_X.head(2)"
+    "train_X.head(2) # see the first two rows of the train dataset"
    ]
   },
   {
@@ -455,28 +460,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "9dc8f3e8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the target columns we want to move from the validate dataset\n",
     "target_columns = ['PATHOLOGY', 'DIFFERENTIAL_DIAGNOSIS', 'INITIAL_EVIDENCE']\n",
+    "# apply the function to validate dataset\n",
     "validate_X, validate_targets = data_pre(validate, target_columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "1275fd33",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# convert the dataset into pandas dataframe\n",
     "validate_targets_df = pd.DataFrame(validate_targets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "e5cf1da8",
    "metadata": {},
    "outputs": [],
@@ -487,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "044ee6a2",
    "metadata": {},
    "outputs": [
@@ -662,13 +670,13 @@
        "[3 rows x 518 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "validate_X.head(3)"
+    "validate_X.head(3) # see the first three rows of the train dataset"
    ]
   },
   {
@@ -681,28 +689,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "b70e18a8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the target columns we want to move from the test dataset\n",
     "target_columns = ['PATHOLOGY', 'DIFFERENTIAL_DIAGNOSIS', 'INITIAL_EVIDENCE']\n",
+    "# apply the function to test dataset\n",
     "test_X, test_targets = data_pre(test, target_columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "9adda021",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# convert the dataset into pandas dataframe\n",
     "test_targets_df = pd.DataFrame(test_targets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "a96b2b1d",
    "metadata": {},
    "outputs": [],
@@ -713,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "f8513322",
    "metadata": {},
    "outputs": [
@@ -855,13 +866,13 @@
        "[2 rows x 518 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_X.head(2)"
+    "test_X.head(2)  # see the first two rows of the train dataset"
    ]
   },
   {
@@ -874,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "98db6e1c",
    "metadata": {},
    "outputs": [],
@@ -886,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "d02ea461",
    "metadata": {},
    "outputs": [
@@ -910,7 +921,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,33 +941,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "bdf6fbff",
+   "execution_count": 20,
+   "id": "667b39ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make predictions on validate dataset\n",
-    "y_pred_validate = logistic_model.predict(validate_X)"
+    "# a function for evaluating the model and get the metric\n",
+    "def calculate_metric(pathology, prediction, index=[\"data\"]):\n",
+    "    return pd.DataFrame({\n",
+    "        \"accuracy\": sklearn.metrics.accuracy_score(pathology, prediction),\n",
+    "        \"precision\": sklearn.metrics.precision_score(pathology, prediction, average=\"macro\"),\n",
+    "        \"recall\": sklearn.metrics.recall_score(pathology, prediction, average=\"macro\"),\n",
+    "        \"f1 score\": sklearn.metrics.f1_score(pathology, prediction, average=\"macro\"),\n",
+    "        \"balanced accuracy\": sklearn.metrics.balanced_accuracy_score(pathology, prediction)\n",
+    "        }, index=index)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ac02aef8",
+   "id": "bdf6fbff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make predictions on validate dataset\n",
+    "y_pred_validate = logistic_model.predict(validate_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b3e7f54a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Model accuracy between train and validation is: 0.99199\n"
+      "/Users/ag/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
    "source": [
-    "# Evaluate the model\n",
-    "accuracy_val = accuracy_score(validatePathology_y, y_pred_validate)\n",
-    "print(f\"Model accuracy between train and validation is: {accuracy_val:.5f}\")"
+    "# apply the function to get the evaluation metric\n",
+    "validation_metric = calculate_metric(validatePathology_y, y_pred_validate, index=[\"data\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8cba67ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1 score</th>\n",
+       "      <th>balanced accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>data</th>\n",
+       "      <td>0.991989</td>\n",
+       "      <td>0.965997</td>\n",
+       "      <td>0.94765</td>\n",
+       "      <td>0.950901</td>\n",
+       "      <td>0.94765</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      accuracy  precision   recall  f1 score  balanced accuracy\n",
+       "data  0.991989   0.965997  0.94765  0.950901            0.94765"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# show the result\n",
+    "validation_metric"
    ]
   },
   {
@@ -969,48 +1060,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "ff01c0ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make predictions on test dataset\n",
+    "# make predictions on test dataset\n",
     "y_pred = logistic_model.predict(test_X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "b2e219ee",
+   "execution_count": 25,
+   "id": "c62c7d76",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model accuracy between train and test is: 0.99193\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Evaluate the model\n",
-    "accuracy = accuracy_score(testPathology_y, y_pred)\n",
-    "print(f\"Model accuracy between train and test is: {accuracy:.5f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "16f00b3c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precision between train and test is:  0.966378\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -1021,66 +1085,70 @@
     }
    ],
    "source": [
-    "precision = precision_score(testPathology_y, y_pred, average='macro')\n",
-    "print(f\"Precision between train and test is: {precision: 5f}\")"
+    "# apply the function to get the evaluation metric\n",
+    "test_metric = calculate_metric(testPathology_y, y_pred, index=[\"data\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "b776b022",
+   "execution_count": 26,
+   "id": "91442582",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recall between train and test is:  0.946374\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1 score</th>\n",
+       "      <th>balanced accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>data</th>\n",
+       "      <td>0.991927</td>\n",
+       "      <td>0.966378</td>\n",
+       "      <td>0.946374</td>\n",
+       "      <td>0.949807</td>\n",
+       "      <td>0.946374</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      accuracy  precision    recall  f1 score  balanced accuracy\n",
+       "data  0.991927   0.966378  0.946374  0.949807           0.946374"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "recall = recall_score(testPathology_y, y_pred, average='macro')\n",
-    "print(f\"Recall between train and test is: {recall: 5f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "928593dd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F1 Score:  0.949807\n"
-     ]
-    }
-   ],
-   "source": [
-    "f1 = f1_score(testPathology_y, y_pred, average='macro')\n",
-    "print(f\"F1 Score: {f1: 5f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "b4ab4121",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Balanced Accuracy:  0.946374\n"
-     ]
-    }
-   ],
-   "source": [
-    "balanced_accuracy = balanced_accuracy_score(testPathology_y, y_pred)\n",
-    "\n",
-    "print(f\"Balanced Accuracy: {balanced_accuracy: 5f}\")"
+    "# show the result\n",
+    "test_metric"
    ]
   }
  ],
