fix model parameters

--- a/predict_pathology/automl.ipynb
+++ b/predict_pathology/automl.ipynb
@@ -1123,7 +1123,7 @@
     "predictor = TabularPredictor(label='PATHOLOGY', problem_type='multiclass').fit(\n",
     "    train, num_gpus=1, presets='medium_quality', \n",
     "    num_bag_folds=5, time_limit=3600,\n",
-    "    hyperparameters= {'XGB': {}, 'GBM': {}, 'RF': {}, 'XT': {}, 'FASTAI': {}})"
+    "    hyperparameters= {'XGB': {}, 'GBM': {}, 'FASTAI': {}})"
    ]
   },
   {
