update file structure

--- a/predict_differential_diagnosis/multilabel_resgression/multilabel.ipynb
+++ b/predict_differential_diagnosis/multilabel_resgression/multilabel.ipynb
@@ -11,9 +11,9 @@
     "import matplotlib.pyplot as plt\n",
     "from MultilabelPredictor import MultilabelPredictor\n",
     "\n",
-    "train = pd.read_csv('20043374\\\\trainProcessed.csv')\n",
-    "validate = pd.read_csv('20043374\\\\validateProcessed.csv')\n",
-    "test = pd.read_csv('20043374\\\\testProcessed.csv')"
+    "train = pd.read_csv('../../data/trainProcessed.csv')\n",
+    "validate = pd.read_csv('../../data/validateProcessed.csv')\n",
+    "test = pd.read_csv('../../data/testProcessed.csv')"
    ]
   },
   {
