--- a/predict_differential_diagnosis/neural_network/Capstone_Neural_network.ipynb
+++ b/predict_differential_diagnosis/neural_network/Capstone_Neural_network.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -55,44 +40,25 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5IXZye1H4CcJ",
-        "outputId": "ec4e10ca-0db9-4869-d5d8-838ee661d784"
-      },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
+      "metadata": {
+        "id": "MMVmPtqb4CbD"
+      },
+      "outputs": [],
+      "source": [
+        "#import dataset\n",
+        "train = pd.read_csv('../../data/trainProcessed.csv')\n",
+        "validate = pd.read_csv('../../data/validateProcessed.csv')\n",
+        "test = pd.read_csv('../../data/testProcessed.csv')"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#import dataset\n",
-        "train = pd.read_csv('/content/drive/MyDrive/trainProcessed.csv')\n",
-        "validate = pd.read_csv('/content/drive/MyDrive/validateProcessed.csv')\n",
-        "test = pd.read_csv('/content/drive/MyDrive/testProcessed.csv')"
-      ],
-      "metadata": {
-        "id": "MMVmPtqb4CbD"
-      },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
+      "metadata": {
+        "id": "t1Jqz5lZ4CZ1"
+      },
+      "outputs": [],
       "source": [
         "import ast\n",
         "def convert_string_to_list(string):\n",
@@ -100,28 +66,28 @@
         "        return ast.literal_eval(string)\n",
         "    except ValueError:\n",
         "        return []"
-      ],
-      "metadata": {
-        "id": "t1Jqz5lZ4CZ1"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7iwLE9Lv4CVB"
+      },
+      "outputs": [],
       "source": [
         "train['DIFFERENTIAL_DIAGNOSIS'] = train['DIFFERENTIAL_DIAGNOSIS'].apply(convert_string_to_list)\n",
         "test['DIFFERENTIAL_DIAGNOSIS'] = test['DIFFERENTIAL_DIAGNOSIS'].apply(convert_string_to_list)\n",
         "validate['DIFFERENTIAL_DIAGNOSIS'] = validate['DIFFERENTIAL_DIAGNOSIS'].apply(convert_string_to_list)"
-      ],
-      "metadata": {
-        "id": "7iwLE9Lv4CVB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-V7V1nhTLbqz"
+      },
+      "outputs": [],
       "source": [
         "unique_diseases = unique_diseases = sorted(list(set(train['PATHOLOGY'])))\n",
         "\n",
@@ -157,15 +123,15 @@
         "X_train, y_train, pathology_encoded_train = data_pre(train, unique_diseases)\n",
         "X_validate, y_validate, pathology_encoded_validate = data_pre(validate, unique_diseases)\n",
         "X_test, y_test, pathology_encoded_test = data_pre(test, unique_diseases)\n"
-      ],
-      "metadata": {
-        "id": "-V7V1nhTLbqz"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "wtPcoFAjIR-9"
+      },
+      "outputs": [],
       "source": [
         "# Calculate GTPA@1\n",
         "class GTPAat1(tf.keras.metrics.Metric):\n",
@@ -187,15 +153,15 @@
         "    def reset_states(self):\n",
         "        self.correct_predictions.assign(0.0)\n",
         "        self.total_samples.assign(0.0)\n"
-      ],
-      "metadata": {
-        "id": "wtPcoFAjIR-9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RXR50YpcH8SH"
+      },
+      "outputs": [],
       "source": [
         "from tensorflow.keras.layers import LeakyReLU\n",
         "\n",
@@ -210,19 +176,11 @@
         "model.add(Dense(y_train.shape[1], activation='sigmoid'))\n",
         "optimizer = Adam(learning_rate=0.00005)\n",
         "model.compile(loss='binary_crossentropy', optimizer=optimizer, metrics=['accuracy', GTPAat1()])\n"
-      ],
-      "metadata": {
-        "id": "RXR50YpcH8SH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "early_stopping = EarlyStopping(monitor='val_loss', patience=20, restore_best_weights=True)\n",
-        "history = model.fit(X_train, y_train, epochs=200, batch_size=128, validation_data=(X_validate, y_validate), callbacks=[early_stopping])"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -230,12 +188,8 @@
         "id": "N6mJCV3iI2T_",
         "outputId": "85107f95-cb39-4db2-c138-37f4d08f9a15"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
           "name": "stdout",
           "output_type": "stream",
           "text": [
@@ -244,9 +198,6 @@
           ]
         },
         {
-          "metadata": {
-            "tags": null
-          },
           "name": "stderr",
           "output_type": "stream",
           "text": [
@@ -255,8 +206,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "8013/8013 [==============================] - 107s 13ms/step - loss: 0.0828 - accuracy: 0.4780 - gtpa_at_1: 0.4780 - val_loss: 0.0619 - val_accuracy: 0.7110 - val_gtpa_at_1: 0.7110\n",
             "Epoch 2/200\n",
@@ -659,10 +610,34 @@
             "8013/8013 [==============================] - 111s 14ms/step - loss: 0.0563 - accuracy: 0.7994 - gtpa_at_1: 0.7994 - val_loss: 0.0557 - val_accuracy: 0.9199 - val_gtpa_at_1: 0.9199\n"
           ]
         }
+      ],
+      "source": [
+        "early_stopping = EarlyStopping(monitor='val_loss', patience=20, restore_best_weights=True)\n",
+        "history = model.fit(X_train, y_train, epochs=200, batch_size=128, validation_data=(X_validate, y_validate), callbacks=[early_stopping])"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2HldhtYpIS1Z",
+        "outputId": "4e161c8b-59c3-4ec7-8c21-4e5ec315db11"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1035/1035 [==============================] - 4s 4ms/step\n",
+            "GTPA@1 on Validation Set: 0.7367646\n",
+            "1052/1052 [==============================] - 4s 4ms/step\n",
+            "GTPA@1 on Test Set: 0.7373429\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "gtpa_at1_metric=GTPAat1()\n",
@@ -681,30 +656,15 @@
         "gtpa_at1_metric.update_state(pathology_encoded_test, y_pred_test)\n",
         "gtpa_at1_test = gtpa_at1_metric.result().numpy()\n",
         "print(\"GTPA@1 on Test Set:\", gtpa_at1_test)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2HldhtYpIS1Z",
-        "outputId": "4e161c8b-59c3-4ec7-8c21-4e5ec315db11"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1035/1035 [==============================] - 4s 4ms/step\n",
-            "GTPA@1 on Validation Set: 0.7367646\n",
-            "1052/1052 [==============================] - 4s 4ms/step\n",
-            "GTPA@1 on Test Set: 0.7373429\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KikmQoycpbaX"
+      },
+      "outputs": [],
       "source": [
         "def calculate_DDR(y_true, y_pred, threshold=0.01):\n",
         "  #turn prediction intro binary according to the threshold\n",
@@ -734,15 +694,15 @@
         "    return DDP\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "KikmQoycpbaX"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Z90vixMf2S-x"
+      },
+      "outputs": [],
       "source": [
         "def calculate_F1(DDR, DDP):\n",
         "    # Check for a case where both DDR and DDP are zero to avoid division by zero\n",
@@ -751,15 +711,29 @@
         "\n",
         "    F1 = 2 * (DDR * DDP) / (DDR + DDP)\n",
         "    return F1\n"
-      ],
-      "metadata": {
-        "id": "Z90vixMf2S-x"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DGW8pC5Jy7fh",
+        "outputId": "96455085-9843-414e-b9f5-acaaa1dca223"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "DDR on Validation Set: 0.9965352038700647\n",
+            "DDP on Validation Set: 0.906254342272449\n",
+            "F1 on Validation Set: 0.9492530138873967\n"
+          ]
+        }
+      ],
       "source": [
         "#On validation set\n",
         "y_validate_np = y_validate.values\n",
@@ -771,29 +745,29 @@
         "print(\"DDR on Validation Set:\", DDR_validate)\n",
         "print(\"DDP on Validation Set:\", DDP_validate)\n",
         "print(\"F1 on Validation Set:\", F1_validate)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DGW8pC5Jy7fh",
-        "outputId": "96455085-9843-414e-b9f5-acaaa1dca223"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "DDR on Validation Set: 0.9965352038700647\n",
-            "DDP on Validation Set: 0.906254342272449\n",
-            "F1 on Validation Set: 0.9492530138873967\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JGIO5o0qvrod",
+        "outputId": "401a9600-82dd-4a95-ba29-6eba9c17e245"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "DDR on Test Set: 0.9965999921550472\n",
+            "DDP on Test Set: 0.9046718765537546\n",
+            "F1 on Test Set: 0.9484135329774365\n"
+          ]
+        }
+      ],
       "source": [
         "# On test set\n",
         "DDR_test = calculate_DDR(y_test_np, y_pred_test)\n",
@@ -802,26 +776,22 @@
         "print(\"DDR on Test Set:\", DDR_test)\n",
         "print(\"DDP on Test Set:\", DDP_test)\n",
         "print(\"F1 on Test Set:\", F1_test)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JGIO5o0qvrod",
-        "outputId": "401a9600-82dd-4a95-ba29-6eba9c17e245"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "DDR on Test Set: 0.9965999921550472\n",
-            "DDP on Test Set: 0.9046718765537546\n",
-            "F1 on Test Set: 0.9484135329774365\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
