--- a/predict_pathology/validate_paper.ipynb
+++ b/predict_pathology/validate_paper.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "test = pd.read_csv(\"../20043374/testProcessed.csv\")"
+    "test = pd.read_csv(\"../data/testProcessed.csv\")"
    ]
   },
   {
