--- a/predict_differential_diagnosis/LSTM/LSTM.ipynb
+++ b/predict_differential_diagnosis/LSTM/LSTM.ipynb
@@ -26,9 +26,9 @@
    "outputs": [],
    "source": [
     "# load dataset\n",
-    "train = pd.read_csv('/Users/ag/Desktop/Study/NEU/MS Data Science/MS Data Science 4th Semester/DS5500 Data Science Capstone/processed data/trainProcessed.csv')\n",
-    "validate = pd.read_csv('/Users/ag/Desktop/Study/NEU/MS Data Science/MS Data Science 4th Semester/DS5500 Data Science Capstone/processed data/validateProcessed.csv')\n",
-    "test = pd.read_csv('/Users/ag/Desktop/Study/NEU/MS Data Science/MS Data Science 4th Semester/DS5500 Data Science Capstone/processed data/testProcessed.csv')"
+    "train = pd.read_csv('../../data/trainProcessed.csv')\n",
+    "validate = pd.read_csv('../../data/validateProcessed.csv')\n",
+    "test = pd.read_csv('../../data/testProcessed.csv')"
    ]
   },
   {
@@ -524,7 +524,7 @@
    "outputs": [],
    "source": [
     "# a function for spliting dataset and drop columns\n",
-    "def data_pre(df, target_column):\n",
+    "def data_pre(df, target_columns):\n",
     "    targets = {}\n",
     "    for column in target_columns:\n",
     "        targets[column] = df[column].copy()\n",
@@ -7643,7 +7643,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -7657,7 +7657,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3c06e3e46abf38078fe4dac36a0085ec2b134ebbd73dd076183d243eeca6918f"
+   }
   }
  },
  "nbformat": 4,
