--- a/predict_pathology/DS5500_Logistic.ipynb
+++ b/predict_pathology/DS5500_Logistic.ipynb
@@ -47,9 +47,9 @@
    "outputs": [],
    "source": [
     "# apply the read_csv function into train, validate, and test datasets reading\n",
-    "train = read_csv('/Users/ag/Desktop/trainProcessed.csv')\n",
-    "validate = read_csv('/Users/ag/Desktop/validateProcessed.csv')\n",
-    "test = read_csv('/Users/ag/Desktop/testProcessed.csv')"
+    "train = read_csv('../data/trainProcessed.csv')\n",
+    "validate = read_csv('../data/validateProcessed.csv')\n",
+    "test = read_csv('../data/testProcessed.csv')"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "outputs": [],
    "source": [
     "# a function for spliting dataset and drop columns\n",
-    "def data_pre(df, target_column):\n",
+    "def data_pre(df, target_columns):\n",
     "    targets = {}\n",
     "    for column in target_columns:\n",
     "        targets[column] = df[column].copy()\n",
@@ -1154,7 +1154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1168,7 +1168,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3c06e3e46abf38078fe4dac36a0085ec2b134ebbd73dd076183d243eeca6918f"
+   }
   }
  },
  "nbformat": 4,
