--- a/predict_pathology/RandomForestModel.ipynb
+++ b/predict_pathology/RandomForestModel.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -46,20 +31,25 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#import dataset\n",
-        "train = pd.read_csv('/content/drive/MyDrive/trainProcessed.csv')\n",
-        "validate = pd.read_csv('/content/drive/MyDrive/validateProcessed.csv')\n",
-        "test = pd.read_csv('/content/drive/MyDrive/testProcessed.csv')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "O9B6RsIIIBM-"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#import dataset\n",
+        "train = pd.read_csv('../data/trainProcessed.csv')\n",
+        "validate = pd.read_csv('../data/validateProcessed.csv')\n",
+        "test = pd.read_csv('../data/testProcessed.csv')"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "D3vE0YGXID-9"
+      },
+      "outputs": [],
       "source": [
         "#Our group decided to use Random forest to predict the pathology.\n",
         "\n",
@@ -68,35 +58,35 @@
         "    X=df.drop(['DIFFERENTIAL_DIAGNOSIS','PATHOLOGY','INITIAL_EVIDENCE'], axis=1)\n",
         "    return X,y\n",
         "X,y=data_pre(train)"
-      ],
-      "metadata": {
-        "id": "D3vE0YGXID-9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X,y=data_pre(train)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "wt4eR_F9SgGu"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X,y=data_pre(train)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "In order to get the best parameter of the model, our group decided to use grid search."
-      ],
       "metadata": {
         "id": "SckBJApFY3Kx"
-      }
+      },
+      "source": [
+        "In order to get the best parameter of the model, our group decided to use grid search."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "05tE0QdAUX9c"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.model_selection import GridSearchCV\n",
@@ -123,28 +113,20 @@
         "grid_search.fit(X, y)\n",
         "\n",
         "best_params_ = grid_search.best_params_\n"
-      ],
-      "metadata": {
-        "id": "05tE0QdAUX9c"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "After finding the best parameter, we use it in the model and see the performance on the valifation set."
-      ],
       "metadata": {
         "id": "JpKtqJSfY9fS"
-      }
+      },
+      "source": [
+        "After finding the best parameter, we use it in the model and see the performance on the valifation set."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "clf = RandomForestClassifier(**best_params_, random_state=0, bootstrap=True)\n",
-        "clf.fit(X, y)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -153,49 +135,72 @@
         "id": "EQ43Kd9gIDq-",
         "outputId": "170ebe11-ba15-4339-e221-4da9a6fc25ed"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "RandomForestClassifier(max_depth=20, min_samples_leaf=2, min_samples_split=4,\n",
-              "                       random_state=0)"
-            ],
             "text/html": [
               "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(max_depth=20, min_samples_leaf=2, min_samples_split=4,\n",
               "                       random_state=0)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(max_depth=20, min_samples_leaf=2, min_samples_split=4,\n",
               "                       random_state=0)</pre></div></div></div></div></div>"
+            ],
+            "text/plain": [
+              "RandomForestClassifier(max_depth=20, min_samples_leaf=2, min_samples_split=4,\n",
+              "                       random_state=0)"
             ]
           },
+          "execution_count": 9,
           "metadata": {},
-          "execution_count": 9
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "clf = RandomForestClassifier(**best_params_, random_state=0, bootstrap=True)\n",
+        "clf.fit(X, y)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**Evaluate on validation dataset**"
-      ],
       "metadata": {
         "id": "GRPa8YPubDyZ"
-      }
+      },
+      "source": [
+        "**Evaluate on validation dataset**"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X_validate,y_validate=data_pre(validate)\n",
-        "y_pred_validate=clf.predict(X_validate)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Ii6YVo-FUyBv"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X_validate,y_validate=data_pre(validate)\n",
+        "y_pred_validate=clf.predict(X_validate)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4agFoVwaU-p0",
+        "outputId": "44880093-b251-4208-cdb8-c2bc828b74be"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 0.9933709833293066\n",
+            "Precision: 0.9940952646224286\n",
+            "Recall: 0.9868095249391869\n",
+            "F1 Score: 0.9931304922059677\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
         "\n",
@@ -208,61 +213,62 @@
         "print(f\"Precision: {precision_v}\")\n",
         "print(f\"Recall: {recall_v}\")\n",
         "print(f\"F1 Score: {f1}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4agFoVwaU-p0",
-        "outputId": "44880093-b251-4208-cdb8-c2bc828b74be"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Accuracy: 0.9933709833293066\n",
-            "Precision: 0.9940952646224286\n",
-            "Recall: 0.9868095249391869\n",
-            "F1 Score: 0.9931304922059677\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "According to the model's outcome validation set, the Accuracy and F1 score is high enough, so it is good to use in the test set. The reason of its high accuracy and F1 score is because of the enormous size of our dataset."
-      ],
       "metadata": {
         "id": "tcnkRCCrZGlA"
-      }
+      },
+      "source": [
+        "According to the model's outcome validation set, the Accuracy and F1 score is high enough, so it is good to use in the test set. The reason of its high accuracy and F1 score is because of the enormous size of our dataset."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**Result on Test dataset**"
-      ],
       "metadata": {
         "id": "yeUOi0VFbOWU"
-      }
+      },
+      "source": [
+        "**Result on Test dataset**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Hdl8anPmVAJ2"
+      },
+      "outputs": [],
       "source": [
         "y_test=test['PATHOLOGY']\n",
         "X_test=test.drop(['DIFFERENTIAL_DIAGNOSIS','PATHOLOGY','INITIAL_EVIDENCE'], axis=1)\n",
         "y_pred_test=clf.predict(X_test)"
-      ],
-      "metadata": {
-        "id": "Hdl8anPmVAJ2"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S4ZV1b3rVAFF",
+        "outputId": "bc15b1f8-38a6-4789-8a35-c087c6431c26"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 0.9936519263504523\n",
+            "Precision: 0.9941703785457606\n",
+            "Recall: 0.9858327643299465\n",
+            "F1 Score: 0.9934309272140678\n",
+            "Balanced Accuracy: 0.9858327643299465\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score,balanced_accuracy_score\n",
         "\n",
@@ -277,62 +283,29 @@
         "print(f\"Recall: {recall}\")\n",
         "print(f\"F1 Score: {f1}\")\n",
         "print(f\"Balanced Accuracy: {balanced_acc}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "S4ZV1b3rVAFF",
-        "outputId": "bc15b1f8-38a6-4789-8a35-c087c6431c26"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Accuracy: 0.9936519263504523\n",
-            "Precision: 0.9941703785457606\n",
-            "Recall: 0.9858327643299465\n",
-            "F1 Score: 0.9934309272140678\n",
-            "Balanced Accuracy: 0.9858327643299465\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Our final result on the test set is shown above. We reached the maximum accuracy of 0.9937 and 0.9934 F1 score, which is high enough to predict the pathology."
-      ],
       "metadata": {
         "id": "30mst-upZXqo"
-      }
+      },
+      "source": [
+        "Our final result on the test set is shown above. We reached the maximum accuracy of 0.9937 and 0.9934 F1 score, which is high enough to predict the pathology."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**Accuracy for each pathology**"
-      ],
       "metadata": {
         "id": "dssX5oi9buKG"
-      }
+      },
+      "source": [
+        "**Accuracy for each pathology**"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "classes = np.unique(y_test)\n",
-        "accuracies = {}\n",
-        "for cls in classes:\n",
-        "\n",
-        "    cls_true = (y_test == cls).astype(int)\n",
-        "    cls_pred = (y_pred_test == cls).astype(int)\n",
-        "\n",
-        "    accuracies[cls] = accuracy_score(cls_true, cls_pred)\n",
-        "\n",
-        "for cls, acc in accuracies.items():\n",
-        "    print(f\"Accuracy for class {cls}: {acc}\")"
-      ],
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -340,11 +313,10 @@
         "id": "hn5OWyuCbb3N",
         "outputId": "c468c4b0-3aae-461b-de04-4564ced6c0ea"
       },
-      "execution_count": 20,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Accuracy for class Anaphylaxie: 1.0\n",
             "Accuracy for class Angine instable: 0.9993086992395691\n",
@@ -397,17 +369,52 @@
             "Accuracy for class Épiglottite: 1.0\n"
           ]
         }
+      ],
+      "source": [
+        "classes = np.unique(y_test)\n",
+        "accuracies = {}\n",
+        "for cls in classes:\n",
+        "\n",
+        "    cls_true = (y_test == cls).astype(int)\n",
+        "    cls_pred = (y_pred_test == cls).astype(int)\n",
+        "\n",
+        "    accuracies[cls] = accuracy_score(cls_true, cls_pred)\n",
+        "\n",
+        "for cls, acc in accuracies.items():\n",
+        "    print(f\"Accuracy for class {cls}: {acc}\")"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Iebm2TVGbbMo"
+      },
       "source": [
         "\n",
         "However, there is one limitation: the grid search process takes too long, our group is still trying to find a less time consuming way. Also, our dataset only contains pathology that are related with breath, throat and lungth. The model performance on dataset that contain wider pathology range is still unclear."
-      ],
-      "metadata": {
-        "id": "Iebm2TVGbbMo"
+      ]
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.11.5 ('base')",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.11.5"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "3c06e3e46abf38078fe4dac36a0085ec2b134ebbd73dd076183d243eeca6918f"
       }
     }
-  ]
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
