--- a/predict_pathology/automl.ipynb
+++ b/predict_pathology/automl.ipynb
@@ -15,7 +15,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "train = pd.read_csv(\"../20043374/trainProcessed.csv\")"
+    "train = pd.read_csv(\"../data/trainProcessed.csv\")"
    ]
   },
   {
@@ -1141,7 +1141,7 @@
    "source": [
     "# load the model\n",
     "from autogluon.tabular import TabularPredictor\n",
-    "predictor = TabularPredictor.load(\"../AutogluonModels/ag-20240208_143450\")"
+    "predictor = TabularPredictor.load(\"../AutogluonModels/ag-20240208_143450\") # you may need to change this path to your model"
    ]
   },
   {
@@ -1200,9 +1200,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "valid = pd.read_csv(\"../20043374/validateProcessed.csv\")\n",
+    "valid = pd.read_csv(\"../data/vvalidateProcessed.csv\")\n",
     "valid = preprocessing(valid)\n",
-    "test = pd.read_csv(\"../20043374/testProcessed.csv\")\n",
+    "test = pd.read_csv(\"../data/testProcessed.csv\")\n",
     "test = preprocessing(test)"
    ]
   },
